--- a/client/src/index_backup.css
+++ b/client/src/index_backup.css
@@ -1,32 +1,3 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  
-  margin: 0;
-  padding: 0;
-  /* background-image: url("../src/image/fondo.jpg"); */
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../src/image/fondo.jpg');
-  background-size: cover;
-  background-position: center; /* Centrar la imagen */
-  background-repeat: no-repeat;
-  height: 100vh; /* Esto asegura que la imagen de fondo cubra todo el alto de la pantalla */
-
-  /* Estilos para el contenido */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -50,6 +21,14 @@ a {
 }
 a:hover {
   color: #535bf2;
+}
+
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
 
 h1 {
