--- a/client/src/Views/Landing/Landing.module.css
+++ b/client/src/Views/Landing/Landing.module.css
@@ -10,6 +10,6 @@
     min-height: 100vh; /* Cambiado a min-height */
     display: flex;
     flex-direction: column; /* Para asegurarse de que el contenido esté centrado */
-    margin-top: 4rem; /* Agrega un margen superior de 4 rem para hacer espacio */
+    /*margin-top: 4rem;  Agrega un margen superior de 4 rem para hacer espacio */
 
     }
