--- a/client/src/Views/Home/Home.module.css
+++ b/client/src/Views/Home/Home.module.css
@@ -1,4 +1,5 @@
 /* Home.module.css */
+/* Home.module.css */
 .home {
   width: 100%; /* Asegura que el componente ocupe todo el ancho disponible */
   min-height: 100vh; /* Asegura que el componente ocupe al menos toda la altura de la pantalla */
@@ -10,19 +11,34 @@
   min-height: 100vh; /* Cambiado a min-height */
   display: flex;
   flex-direction: column; /* Para asegurarse de que el contenido esté centrado */
-  /*margin-top: 4rem;  Agrega un margen superior de 4 rem para hacer espacio */
-
   }
 
-/* .home {
-    display: flex;
-    flex-direction: column; 
-    margin-top: 1rem; 
+  .spanPaginador {
+    color: white;
+    text-align: center;
+    display: inline-block; 
+    vertical-align: middle;  
+    line-height: normal; /* Esto es necesario para centrar verticalmente */
+  }
 
-    } */
+.buttonArrow {
+    background: transparent;
+    border: 0;
+    outline:0;
+  }
+
+.buttonArrow:hover polyline,
+.buttonArrow:focus polyline {
+  strokeWidth : 3;
+}
+
+.buttonArrow:active polyline {
+  stroke-width: 6;
+  transition: all 100ms ease-in-out;
+}
 
 
-    /* Estilos para la paginación */
+  /* Estilos para la paginación */
 .pagination {
     display: flex;
     justify-content: center;
