--- a/client/src/Views/Home/SearchInput/SearchInput.module.css
+++ b/client/src/Views/Home/SearchInput/SearchInput.module.css
@@ -3,7 +3,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-top: 5rem; /* Agrega un margen superior de 4 rem para hacer espacio */
+  margin-top: 6rem;
   justify-content: center;
   align-items: center;
 
