--- a/client/src/components/Navbar/Navbar.module.css
+++ b/client/src/components/Navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 /* Navbar.module.css */
 .navbar {
-  background-color: #333;
+  background-color: #253625;
   color: white;
   text-align: center;
   padding: 1rem;
@@ -9,3 +9,7 @@
   width: 100%;
   z-index: 100;
   }
+  .buttonNav{
+    margin-left: 20px;
+    font-weight: 300px;
+    }
