bug resuelto select

--- a/client/src/Views/Home/SearchInput/SearchInput.module.css
+++ b/client/src/Views/Home/SearchInput/SearchInput.module.css
@@ -9,7 +9,7 @@
 
 }
 
-.input {
+.inputS {
   font-size: 36px;
   padding: 10px 10px 10px 5px;
   display: block;
@@ -18,10 +18,10 @@
   border-bottom: 1px solid #515151;
   background: transparent;
   text-align: center; /* Centrar el texto horizontalmente */
-
+  color: rgb(255, 174, 0);
 }
 
-.input:focus {
+.inputS:focus {
   outline: none;
 }
 
@@ -45,8 +45,8 @@
   transition-delay: calc(var(--index) * 0.05s);
 }
 
-.input:focus ~ .label .label-char,
-.input:valid ~ .label .label-char {
+.inputS:focus ~ .label .label-char,
+.inputS:valid ~ .label .label-char {
   transform: translateY(-20px);
   font-size: 14px;
   color: #c6cdea;
@@ -77,7 +77,7 @@
   right: 50%;
 }
 
-.input:focus ~ .bar:before,
-.input:focus ~ .bar:after {
+.inputS:focus ~ .bar:before,
+.inputS:focus ~ .bar:after {
   width: 50%;
 }
